--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
     "react-infinite-scroller": "^1.2.4",
+    "react-player": "^2.9.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "reactjs-media": "^1.5.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
